Incorporate shade plugin for app bundling